# openai-agents-sdk-tutorial

./: 1_basic.py  2_1_chat.py  2_2_chat_stream.py  2_3_chat_ui.py  3_1_tool.py  3_1_tool_mcp.py  3_2_tool_mcp.py  3_2_tool_websearch.py  3_3_tool_agent.py  3_3_tool_agentastool.py  3_3_tool_mcp.py  3_4_tool_agentastool.py  3_5_tool_ui.py  4_1_context.py  4_1_structured_output.py  4_2_context.py  4_2_structured_output.py  4_3_guardrail.py  4_4_handoff.py  4_4_handoff_triage.py  5_final_agent.py  6_1_gemini.py  6_2_tracing.py  6_gemini.py  6_tips.ipynb  6_tips.py  pyproject.toml  readme.md
